# ggxrd-mod

./: Cargo.toml  README.md  SAMMI_INFO.md  WEBSOCKETS_INFO.md  build.rs
.github/workflows/: rust.yml
include/: GameDefines.hpp  Interop.hpp  SdkHeaders.hpp
include/SDK_HEADERS/: Core_classes.hpp  Core_parameters.hpp  Core_structs.hpp  Engine_classes.hpp  Engine_parameters.hpp  Engine_structs.hpp  GFxUI_classes.hpp  GFxUI_parameters.hpp  GFxUI_structs.hpp  GameFramework_classes.hpp  GameFramework_parameters.hpp  GameFramework_structs.hpp  IpDrv_classes.hpp  IpDrv_parameters.hpp  IpDrv_structs.hpp  OnlineSubsystemSteamworks_classes.hpp  OnlineSubsystemSteamworks_parameters.hpp  OnlineSubsystemSteamworks_structs.hpp  REDGameContent_classes.hpp  REDGameContent_parameters.hpp  REDGameContent_structs.hpp  REDGame_classes.hpp  REDGame_parameters.hpp  REDGame_structs.hpp  WinDrv_classes.hpp  WinDrv_parameters.hpp  WinDrv_structs.hpp  XAudio2_classes.hpp  XAudio2_parameters.hpp  XAudio2_structs.hpp
src/: GameDefines.cpp  discord_presence.rs  error.rs  global.rs  helpers.rs  input_prediction.rs  lib.rs  match_recorder.rs  sammi.rs  sdk.rs  speedhack.rs  steam.rs  websockets.rs
src/SDK_HEADERS/: Core_classes.cpp  GFxUI_classes.cpp  GameFramework_classes.cpp  IpDrv_classes.cpp  OnlineSubsystemSteamworks_classes.cpp  REDGameContent_classes.cpp  REDGame_classes.cpp  WinDrv_classes.cpp  XAudio2_classes.cpp
src/game/: hooks.rs  internal.rs  mod.rs  offset.rs  types.rs
src/ui/: gui.rs  mod.rs  ui_hooks.rs
