[package]
name = "rev2-mod"
version = "0.1.0"
authors = [""]
edition = "2018"


[lib]
name = "rev2hook"
path = "src/lib.rs" 
crate_type = ["cdylib"]

[features]
save-state = []

# default = ["save-state"]

[dependencies]
imgui-impl-win32-rs = { git = "https://github.com/super-continent/imgui-impl-win32-rs" }
imgui-dx9-renderer = "0"
winapi = { version = "0", features = ["minwindef", "consoleapi", "libloaderapi", "d3d9", "d3d9types", "ntdef"] }
imgui = "0.6"
detour = { git = "https://github.com/darfink/detour-rs"}
lazy_static = "1"
parking_lot = "0"
log = "0.4"
simplelog = "0.8"
thiserror = "1.0"
